2011-05-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_io.php
	include/config_process.php
	include/functions_extensions.php
	index.php
	extensions/insert_data.php
	extensions/system_info.php
	extensions/extension_uploader.php
	extensions/pandora_logs.php
	extensions/agents_modules.php
	extensions/update_manager.php
	extensions/ssh_console.php
	extensions/dbmanager.php
	extensions/vnc_view.php
	extensions/resource_registration.php
	extensions/resource_exportation.php
	extensions/users_connected.php
	extensions/module_groups.php
	extensions/plugin_registration.php
	godmode/extensions.php: functions in 
	functions_extensions.php have "extensions_" prefix.
	* install.php: Drop database action is not allowed when installation
	it's performed over a new database. 

2011-05-11 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: added hooks for to enterprise ACL.

	* extensions/module_groups.php: cleaned source code.

2011-05-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_users.php
	include/functions_html.php
	include/functions_menu.php
	include/functions_messages.php
	include/functions_modules.php
	include/functions_reporting.php
	include/functions_groups.php
	include/functions_gis.php
	include/auth/ldap.php
	include/auth/mysql.php
	include/functions_networkmap.php
	include/functions_network_components.php
	include/functions_visual_map.php
	include/functions_profile.php
	include/ajax/visual_console_builder.ajax.php
	include/ajax/alert_list.ajax.php
	include/ajax/module.php
	include/functions_config.php
	include/functions_api.php
	include/functions_ui.php
	include/functions_custom_graphs.php
	include/fgraph.php
	include/functions_agents.php
	include/functions_db.php
	include/functions_alerts.php
	include/functions_reports.php
	index.php
	extensions/insert_data.php
	extensions/agents_modules.php
	extensions/resource_registration.php
	extensions/resource_exportation.php